<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mess"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="xr.example.com.bishe.Welcome.MessActivity">

    <TextView
        android:id="@+id/tv_mess_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_showlat"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="28dp"
        android:text="@string/lon"
        android:textSize="21sp" />

    <TextView
        android:id="@+id/tv_mess_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/et_showlat"
        android:layout_alignBottom="@+id/et_showlat"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/lat"
        android:textSize="21sp" />

    <TextView
        android:id="@+id/tv_mess_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_mess_1"
        android:layout_alignStart="@+id/tv_mess_1"
        android:layout_alignTop="@+id/timepassed"
        android:text="@string/timepassed"
        android:textSize="21sp" />

    <TextView
        android:id="@+id/tv_mess_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_mess_3"
        android:layout_alignStart="@+id/tv_mess_3"
        android:layout_below="@+id/timepassed"
        android:layout_marginTop="22dp"
        android:text="@string/numgeted"
        android:textSize="21sp" />

    <TextView
        android:id="@+id/tv_mess_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_mess_4"
        android:layout_alignStart="@+id/tv_mess_4"
        android:layout_below="@+id/numgeted"
        android:layout_marginTop="28dp"
        android:text="@string/dist_bike"
        android:textSize="21sp" />

    <EditText
        android:id="@+id/et_showlat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:text="Name" />

    <EditText
        android:id="@+id/et_showlon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_mess_1"
        android:layout_alignBottom="@+id/tv_mess_1"
        android:layout_alignLeft="@+id/et_showlat"
        android:layout_alignStart="@+id/et_showlat"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:text="Name" />

    <Button
        android:id="@+id/btn_manual_measure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_transform"
        android:layout_alignLeft="@+id/btn_transform"
        android:layout_alignStart="@+id/btn_transform"
        android:layout_marginBottom="41dp"
        android:onClick="manual_measure"
        android:text="@string/manual_measure"
        android:textSize="19sp" />

    <Button
        android:id="@+id/btn_transform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_mess_5"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/tv_mess_5"
        android:layout_marginBottom="32dp"
        android:text="@string/btn_transform"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/timepassed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_showlon"
        android:layout_alignStart="@+id/et_showlon"
        android:layout_below="@+id/et_showlon"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Time" />

    <EditText
        android:id="@+id/numgeted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_mess_4"
        android:layout_alignBottom="@+id/tv_mess_4"
        android:layout_toEndOf="@+id/tv_mess_3"
        android:layout_toRightOf="@+id/tv_mess_3"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/xml_showdist"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_mess_5"
        android:layout_alignEnd="@+id/timepassed"
        android:layout_alignRight="@+id/timepassed"
        android:ems="10"
        android:inputType="textPersonName" />

</RelativeLayout>
