<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="274dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:layout_weight="6">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00ffaa"
            android:text="TextView"
            android:textColor="#ff0000" />

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1.5"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txv_inputpoint"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="请输入聚类点数："
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txv_inputrange"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="请输入选址范围:"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_cluster1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="请输入整数："
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_cluster2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="(>=10m)"
                    android:inputType="textPersonName" />

                <Spinner
                    android:id="@+id/lanlon_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:entries="@array/lanlon_rate" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_auto_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:layout_weight="3"
            android:onClick="btn_ok"
            android:paddingTop="0dp"
            android:text="@string/cluster_polished"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_manual_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:layout_weight="2"
            android:onClick="btn_ok"
            android:paddingTop="0dp"
            android:text="@string/cluster_ok"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/frequence_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:layout_weight="3"
            android:onClick="frequence_ok"
            android:text="@string/frequence_ok"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_map_show"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:layout_weight="2"
            android:onClick="btn_mapshow"
            android:text="@string/map_show"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>